--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -672,6 +672,7 @@ section {
 .why-us .accordion-list {
   padding: 0 100px 60px 100px;
 }
+
 .why-us .accordion-list ul {
   padding: 0;
   list-style: none;
@@ -1483,7 +1484,7 @@ section {
 
 .contact .php-email-form .validate {
   display: none;
-  color: red;
+  color: rgb(0, 255, 0);
   margin: 0 0 15px 0;
   font-weight: 400;
   font-size: 13px;
@@ -1492,7 +1493,7 @@ section {
 .contact .php-email-form .error-message {
   display: none;
   color: #fff;
-  background: #ed3c0d;
+  background: hsl(128, 90%, 55%);
   text-align: left;
   padding: 15px;
   font-weight: 600;
